fix crumbs vertical alignment and seperator

--- a/src/scss/components/_crumbs.scss
+++ b/src/scss/components/_crumbs.scss
@@ -11,6 +11,7 @@
 // Layout Variables
 $crumbs-spacing: $default-spacing !default;
 $crumbs-height: $default-height !default;
+$crumbs-seperator-height: $default-height-dense !default;
 
 
 // Theme Variables
@@ -62,6 +63,8 @@ $crumbs-icon-hover-color: $default-action-color-hover !default;
 	}
 
 	&-seperator {
+		width: $crumbs-seperator-height;
+		height: $crumbs-seperator-height;
 		margin-left: -($crumbs-spacing / 2);
 	}
 
@@ -69,7 +72,8 @@ $crumbs-icon-hover-color: $default-action-color-hover !default;
 		white-space: nowrap;
 		position: relative;
 		display: inline-flex;
-		align-self: center;
+		justify-content: center;
+		align-items: center;
 		height: $crumbs-height;
 		padding: $crumbs-spacing;
 		padding-right: 0;
@@ -85,8 +89,7 @@ $crumbs-icon-hover-color: $default-action-color-hover !default;
 		padding-left: ($crumbs-spacing / 2);
 	}
 
-	&-icon + &-text {
-		margin-right: -($crumbs-spacing / 2);
-		margin-left: $crumbs-spacing;
+	&-icon {
+		margin-right: ($crumbs-spacing / 2);
 	}
 }
